--- a/commom/css/estilo.css
+++ b/commom/css/estilo.css
@@ -1271,6 +1271,10 @@ iframe{
         padding-left: 10px;
         margin-top: 10px;
     }
+
+    .select-modelo-mob{
+        padding-left: 15px;
+    }
 }
 
 @media all and (min-width: 768px){
