--- a/commom/templates/calha.html
+++ b/commom/templates/calha.html
@@ -88,6 +88,37 @@
                         <div class="linha-baixo-titulo">
                             <h2 class="titulo-destaque-pag">veja também</h2>
                         </div>
+                        {section name=i loop=$RetornoDestaque max=3}                     
+                            <div class="col-xs-12 col-sm-4 col-md-4 produto-home">
+                                {if $RetornoDestaque[i].super == 1}
+                                    <div class="super-produto-home">
+                                        <p class="txt-super-produto">Super Calha</p>
+                                    </div>
+                                {/if}
+                                <div class="bloco-produto-home">
+                                    {if $RetornoDestaque[i].caminhoImagem}
+                                        <img src="{$RetornoDestaque[i].caminhoImagem}" title="{$RetornoDestaque[i].descricao}" alt="{$RetornoDestaque[i].descricao}">
+                                    {else}
+                                        <img src="commom/img/sem-foto.jpg" title="{$RetornoDestaque[i].descricao}" alt="{$RetornoDestaque[i].descricao}">
+                                    {/if}
+                                    <p class="txt-produto-home">{$RetornoDestaque[i].descricao}</p>
+                                    <a href="calha.php?id={$RetornoDestaque[i].id}" class="btn-default" alt="Saiba mais sobre {$RetornoDestaque[i].descricao}" title="Saiba mais sobre {$RetornoDestaque[i].descricao}">
+                                        <img src="commom/img/icon-mais.png" alt="icone mais" title="icone mais">
+                                        saiba mais
+                                    </a>
+                                </div>
+                            </div>
+                        {/section}
+                        <!-- <div class="col-xs-12 col-sm-4 col-md-4 produto-home">
+                            <div class="bloco-produto-home">
+                                <img src="commom/img/produto.jpg" title="Produto" alt="Produto">
+                                <p class="txt-produto-home">Calha de Chuva Renegade 15 4P</p>
+                                <a href="calha.php" class="btn-default" alt="Saiba mais sobre esse produto" title="Saiba mais sobre esse produto">
+                                    <img src="commom/img/icon-mais.png" alt="icone mais" title="icone mais">
+                                    saiba mais
+                                </a>
+                            </div>
+                        </div>
                         <div class="col-xs-12 col-sm-4 col-md-4 produto-home">
                             <div class="super-produto-home">
                                 <p class="txt-super-produto">Super Calha</p>        
@@ -100,30 +131,7 @@
                                     saiba mais
                                 </a>
                             </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-4 col-md-4 produto-home">
-                            <div class="bloco-produto-home">
-                                <img src="commom/img/produto.jpg" title="Produto" alt="Produto">
-                                <p class="txt-produto-home">Calha de Chuva Renegade 15 4P</p>
-                                <a href="calha.php" class="btn-default" alt="Saiba mais sobre esse produto" title="Saiba mais sobre esse produto">
-                                    <img src="commom/img/icon-mais.png" alt="icone mais" title="icone mais">
-                                    saiba mais
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-4 col-md-4 produto-home">
-                            <div class="super-produto-home">
-                                <p class="txt-super-produto">Super Calha</p>        
-                            </div>
-                            <div class="bloco-produto-home">
-                                <img src="commom/img/produto.jpg" title="Produto" alt="Produto">
-                                <p class="txt-produto-home">Calha de Chuva Renegade 15 4P</p>
-                                <a href="calha.php" class="btn-default" alt="Saiba mais sobre esse produto" title="Saiba mais sobre esse produto">
-                                    <img src="commom/img/icon-mais.png" alt="icone mais" title="icone mais">
-                                    saiba mais
-                                </a>
-                            </div>
-                        </div>
+                        </div> -->
                     </div>                        
                 </div>
             </div>
