--- a/commom/templates/index.html
+++ b/commom/templates/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Ecoflex</title>
+    <title>Ecoflex - Calha de chuva automotiva</title>
     <meta name="robots" content="index, follow">
-    <meta name="description" content="" />
+    <meta name="description" content="Acessórios para carros, calhas de chuva automotivas é na Ecoflex. Solicite um orçamento!" />
     <link href="commom/img/icon-tab.png" rel="icon">
     <!-- Bootstrap -->
     <link href="commom/css/bootstrap.min.css" rel="stylesheet">
@@ -77,53 +77,6 @@
                         </div>
                     </div>
                 {/section}
-
-                <!-- <div class="col-xs-12 col-sm-3 col-md-3 produto-home">
-                    <div class="super-produto-home">
-                        <p class="txt-super-produto">Super Calha</p>        
-                    </div>
-                    <div class="bloco-produto-home">
-                        <img src="commom/img/produto.jpg" title="Produto" alt="Produto">
-                        <p class="txt-produto-home">Calha de Chuva Renegade 15 4P</p>
-                        <a href="calha.php" class="btn-default" alt="Saiba mais sobre esse produto" title="Saiba mais sobre esse produto">
-                            <img src="commom/img/icon-mais.png" alt="icone mais" title="icone mais">
-                            saiba mais
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-3 produto-home">
-                    <div class="bloco-produto-home">
-                        <img src="commom/img/produto.jpg" title="Produto" alt="Produto">
-                        <p class="txt-produto-home">Calha de Chuva Renegade 15 4P</p>
-                        <a href="calha.php" class="btn-default" alt="Saiba mais sobre esse produto" title="Saiba mais sobre esse produto">
-                            <img src="commom/img/icon-mais.png" alt="icone mais" title="icone mais">
-                            saiba mais
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-3 produto-home">
-                    <div class="super-produto-home">
-                        <p class="txt-super-produto">Super Calha</p>        
-                    </div>
-                    <div class="bloco-produto-home">
-                        <img src="commom/img/produto.jpg" title="Produto" alt="Produto">
-                        <p class="txt-produto-home">Calha de Chuva Renegade 15 4P</p>
-                        <a href="calha.php" class="btn-default" alt="Saiba mais sobre esse produto" title="Saiba mais sobre esse produto">
-                            <img src="commom/img/icon-mais.png" alt="icone mais" title="icone mais">
-                            saiba mais
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-3 col-md-3 produto-home">
-                    <div class="bloco-produto-home">
-                        <img src="commom/img/produto.jpg" title="Produto" alt="Produto">
-                        <p class="txt-produto-home">Calha de Chuva Renegade 15 4P</p>
-                        <a href="calha.php" class="btn-default" alt="Saiba mais sobre esse produto" title="Saiba mais sobre esse produto">
-                            <img src="commom/img/icon-mais.png" alt="icone mais" title="icone mais">
-                            saiba mais
-                        </a>
-                    </div>
-                </div> -->
             </article>
             <div class="row">
                 <h2 class="titulo-destaque-pag">trabalhamos com as Marcas</h2>
@@ -157,9 +110,9 @@
                 </div> 
                 <div class="col-xs-12 col-sm-6 col-md-6">
                     <h2 class="titulo-destaque-pag">Catálogo</h2>
-                    <div class="txt-destaque-pag">
+                    <div class="txt-destaque-pag txt-destaque-pag-index">
                         <img class="img-catalogo" src="commom/img/catalogo.png" alt="Catálogo" title="Catálogo">
-                        <p class="txt-catalogo">Lorem Ipsum é simplesmente uma simulação de texto.</p><br>
+                        <p class="txt-catalogo">Baixe nosso catálogo de produtos.</p><br>
                         <a href="" class="btn-default btn-download" alt="Saiba mais sobre esse produto" title="Saiba mais sobre esse produto">
                             <img src="commom/img/download.png" alt="icone download" title="icone download">
                             Download
