--- a/commom/templates/fale-conosco.html
+++ b/commom/templates/fale-conosco.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ecoflex</title>
+    <title>Entre em contato conosco!</title>
     <meta name="robots" content="index, follow">
-    <meta name="description" content="" />
+    <meta name="description" content="Empresa de calhas de chuva automotivas. Solicite um orçamento." />
     <link href="commom/img/icon-tab.png" rel="icon">
     <link href="commom/css/bootstrap.min.css" rel="stylesheet">
     <link href="commom/css/estilo.css" rel="stylesheet">
@@ -27,7 +27,8 @@
         <section class="conteudo">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-md-8">
-                    <h1 class="titulo-destaque-pag align-left">Entre em contato conosco!</h1><br><br>
+                    <h1 class="titulo-destaque-pag align-left">Entre em contato conosco!</h1><br>
+                    <p class="txt-interna">Venha conhecer a Ecoflex. Preencha seus dados que entraremos em contato.</p><br><br>
                     {include file="inc/form.html"}
                 </div>  
                 <div class="col-xs-12 col-sm-4 col-md-4 bloco-contato-fale">  
