--- a/commom/templates/quem-somos.html
+++ b/commom/templates/quem-somos.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ecoflex</title>
+    <title>Empresa especialista em calha de chuva automotiva.</title>
     <meta name="robots" content="index, follow">
-    <meta name="description" content="" />
+    <meta name="description" content="Empresa que comercializa calha de chuva automotiva." />
     <link href="commom/img/icon-tab.png" rel="icon">
     <link href="commom/css/bootstrap.min.css" rel="stylesheet">
     <link href="commom/css/estilo.css" rel="stylesheet">
@@ -28,14 +28,10 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-7 col-md-7">
                     <h1 class="titulo-destaque-pag align-left">ecoflex automotive</h1><br>
-                    <h2 class="txt-interna"><strong>Missão</strong></h2>
-                    <p class="txt-interna">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos.</p><br>
-
-                    <h2 class="txt-interna"><strong>Visão</strong></h2>
-                    <p class="txt-interna">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos.</p><br>
-
-                    <h2 class="txt-interna"><strong>Valores</strong></h2>
-                    <p class="txt-interna">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos.</p><br>
+                    <!-- <h2 class="txt-interna"><strong>Missão</strong></h2> -->
+                    <p class="txt-interna">Somos uma empresa que comercializa calhas de chuva automotiva para as mais diversas marcas de automóveis.</p><br>
+                    
+                    <p class="txt-interna">Oferecemos serviços de qualidade atendendo aos nossos clientes com perfeição e comercializar produtos de qualidade nos comprometendo com a satisfação do cliente.</p><br>
                 </div>  
                 <div class="col-xs-12 col-sm-5 col-md-5">  
                     <img class="img-responsive" src="commom/img/empresa.jpg" alt="empresa" title="empresa">
