Algumas alterações basicas

--- a/commom/css/estilo.css
+++ b/commom/css/estilo.css
@@ -1043,7 +1043,7 @@ a:focus{
 
 .icon-img-desc{
     max-width: 50px;
-    margin-top: -13px;   
+    /*margin-top: -13px;   */
 }
 
 .bloco-orcamento-produto{
