--- a/commom/templates/inc/header.html
+++ b/commom/templates/inc/header.html
@@ -13,7 +13,7 @@
 		            <a class="navbar-brand" href="index.php"> <img src="commom/img/logo.jpg" alt="EcoFlex automotive" title="EcoFlex automotive"> </a>
 	            </div>
 	            <div class="col-xs-12 search-mobile">
-			    	<form class="form-search" action="" method="get" name="search">
+			    	<form class="form-search" action="calhas.php" method="get" name="search">
 			    		<input class="busca" type="search" name="busca" value="{$postBusca}" placeholder="Pesquisar...">
 			    		<input class="buscar" type="submit" value="">
 			    	</form>
@@ -53,11 +53,11 @@
 		<div class="encapsula-contato-topo pd-none">
 	    	<div class="col-xs-12 col-sm-2 col-md-2 bloco-tel-topo pd-none">
 				<img class="icon-contato-topo" src="commom/img/icon-tel.png" alt="Icone telefone" title="Icone telefone">
-				<a href="tel:11988643325" class="link-contato-topo" alt="" title="">11  0000-0000</a>
+				<a href="tel:11988643325" class="link-contato-topo" title="11  0000-0000">11  0000-0000</a>
 	    	</div> 
 	    	<div class="col-xs-12 col-sm-2 col-md-2 bloco-email-topo pd-none">
 				<img class="icon-contato-topo" src="commom/img/icon-email.png" alt="Icone telefone" title="Icone telefone">
-				<a href="mailto:contato@ecoflex.com.br" class="link-contato-topo" alt="contato@ecoflex.com.br" title="contato@ecoflex.com.br">contato@ecoflex.com.br</a>
+				<a href="mailto:contato@ecoflex.com.br" class="link-contato-topo" title="contato@ecoflex.com.br">contato@ecoflex.com.br</a>
 	    	</div>
 	    	<!-- <div class="col-xs-12 col-sm-2 col-md-2 bloco-local-topo pd-none hidden-xs">
 	    		<img class="icon-contato-topo" src="commom/img/icon-local.png" alt="Icone telefone" title="Icone telefone">
