--- a/commom/templates/index.html
+++ b/commom/templates/index.html
@@ -70,7 +70,7 @@
                                 <img src="commom/img/sem-foto.jpg" title="{$RetornoDestaque[i].descricao}" alt="{$RetornoDestaque[i].descricao}">
                             {/if}
                             <p class="txt-produto-home">{$RetornoDestaque[i].descricao}</p>
-                            <a href="calha.php?id={$RetornoDestaque[i].id}" class="btn-default" alt="Saiba mais sobre {$RetornoDestaque[i].descricao}" title="Saiba mais sobre {$RetornoDestaque[i].descricao}">
+                            <a href="calha.php?id={$RetornoDestaque[i].id}" class="btn-default" title="Saiba mais sobre {$RetornoDestaque[i].descricao}">
                                 <img src="commom/img/icon-mais.png" alt="icone mais" title="icone mais">
                                 saiba mais
                             </a>
@@ -113,7 +113,7 @@
                     <div class="txt-destaque-pag txt-destaque-pag-index">
                         <img class="img-catalogo" src="commom/img/catalogo.png" alt="Catálogo" title="Catálogo">
                         <p class="txt-catalogo">Baixe nosso catálogo de produtos.</p><br>
-                        <a href="" class="btn-default btn-download" alt="Saiba mais sobre esse produto" title="Saiba mais sobre esse produto">
+                        <a href="" class="btn-default btn-download" title="Saiba mais sobre esse produto">
                             <img src="commom/img/download.png" alt="icone download" title="icone download">
                             Download
                         </a>
