--- a/commom/templates/fale-conosco.html
+++ b/commom/templates/fale-conosco.html
@@ -36,7 +36,7 @@
                         <p class="titulo-rodape">Atendimento:</p>
                         <ul>
                             <li class="linha-rodape"><a class="link-rodape" href="tel:1100000000 ">(11) 0000-0000</a></li>
-                            <li class="linha-rodape"><a class="link-rodape" href="mailto:contato@ecoflex.com.br">contato@ecoflex.com.br</a></li>
+                            <li class="linha-rodape"><a class="link-rodape" href="mailto:contato@ecoflexautomotive.com.br">contato@ecoflexautomotive.com.br</a></li>
                             <li class="linha-rodape">Seg a Sáb das 9:00 às 18:30hs.</li>
                         </ul>
                     </div>
