--- a/commom/templates/index.html
+++ b/commom/templates/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" type="text/css" href="commom/css/vitrine/owl.theme.css">
     <link rel="stylesheet" type="text/css" href="commom/css/vitrine/owl.transitions.css">
     <!-- vitrine -->
+    <meta name="google-site-verification" content="WPU_p881zWfs52gsyB1OOEvEG6ElbcPeTIoqb1W2ghA" />
 </head>
 <body>
     <div class="container-fluid pd-none">
@@ -36,13 +37,12 @@
 	                        <div id="owl-demo" class="owl-carousel">
 	                           <div class="item">
 	                              	<div class="bloco-desc-banner">
-	                                 	<h2 class="font-bold">Tribunal de Contas Controle de Contas Públicas</h2>
-	                                 	<div class="linha-desc-banner"></div>
-	                                 	<p class="font-normal">Assessoria prévia à prestação de contas, orientações e acompanhamentos sobre aplicação e destinação de recursos públicos diante dos atuais posicionamentos dos Tribunais de </p>
+	                                 	<h2 class="">Calhas automotivas</h2>
+	                                 	<p class="">A Ecoflex possui uma vasta linhas de calhas automotivas para os mais diversos modelos. Utilizamos matéria prima de primeira linha, 100% acrílico, tecnologia 3M e instalação simples.</p>
 	                              	</div>
 	                              <img src="commom/img/banner.jpg" alt="banner" title="banner">
 	                           	</div>
-	                            <div class="item"><img src="commom/img/banner.jpg" alt="banner" title="banner"></div>
+	                            <!-- <div class="item"><img src="commom/img/banner.jpg" alt="banner" title="banner"></div> -->
 	                        </div>
                      	</div>
                   	</div>
@@ -53,7 +53,7 @@
         <section class="conteudo">
             <div class="row">
                 <h1 class="titulo-destaque-pag">Nossos produtos</h1>
-                <p class="txt-destaque-pag">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica.</p>
+                <p class="txt-destaque-pag">Os produtos comercializados pela Ecoflex têm como objetivo trazer conforto e segurança em seu automóvel nos dias de chuva!</p>
             </div>
             <article class="row bloco-produtos-destaque">
                 {section name=i loop=$RetornoDestaque max=4}                     
@@ -79,8 +79,10 @@
                 {/section}
             </article>
             <div class="row">
-                <h2 class="titulo-destaque-pag">trabalhamos com as Marcas</h2>
-                <p class="txt-destaque-pag">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica.</p>
+                <div class="linha-baixo-titulo">
+                    <h2 class="titulo-destaque-pag">trabalhamos com as Marcas</h2>
+                </div>
+                <p class="txt-destaque-pag no-border-top">Trabalhamos com as mais diversas marcas.</p>
             </div>
             <div class="row">
                 <img src="commom/img/audi.png" alt="audi" title="audi" class="img-marca">
@@ -92,21 +94,21 @@
                 <img src="commom/img/fiat.png" alt="fiat" title="fiat" class="img-marca">
                 <img src="commom/img/ford.png" alt="ford" title="ford" class="img-marca">
 
-                <img src="commom/img/audi.png" alt="audi" title="audi" class="img-marca">
-                <img src="commom/img/bmw.png" alt="bmw" title="bmw" class="img-marca">
-                <img src="commom/img/chery.png" alt="chery" title="chery" class="img-marca">
-                <img src="commom/img/chevrolet.png" alt="chevrolet" title="chevrolet" class="img-marca">
-                <img src="commom/img/citroen.png" alt="citroen" title="citroen" class="img-marca">
-                <img src="commom/img/dodge.png" alt="dodge" title="dodge" class="img-marca">
-                <img src="commom/img/fiat.png" alt="fiat" title="fiat" class="img-marca">
-                <img src="commom/img/ford.png" alt="ford" title="ford" class="img-marca">
+                <img src="commom/img/vwlogo.png" alt="volkswagen" title="volkswagen" class="img-marca">
+                <img src="commom/img/honda.png" alt="honda" title="honda" class="img-marca">
+                <img src="commom/img/hyundai.png" alt="hyundai" title="hyundai" class="img-marca">
+                <img src="commom/img/kia.png" alt="kia" title="kia" class="img-marca">
+                <img src="commom/img/peugeot.png" alt="peugeot" title="peugeot" class="img-marca">
+                <img src="commom/img/mercedes.png" alt="mercedes" title="mercedes" class="img-marca">
+                <img src="commom/img/nissan.png" alt="nissan" title="nissan" class="img-marca">
+                <img src="commom/img/renault.png" alt="renault" title="renault" class="img-marca">
             </div>
-
             <div class="row bloco-parceiro-catalogo">
                 <div class="col-xs-12 col-sm-6 col-md-6">
-                    <h2 class="titulo-destaque-pag">parceria</h2>
-                    <p class="txt-destaque-pag mg-bottom-txt">Lorem Ipsum é simplesmente uma simulação de texto.</p>
-                    <a href=""><img class="center-block" src="commom/img/top-mix.png" alt="top mix" title="top mix"></a>
+                    <div class="linha-baixo-titulo">
+                        <h2 class="titulo-destaque-pag">parceria</h2>
+                    </div>
+                    <a href="http://www.topmixfrisos.com.br/" target="_blank"><img class="center-block" src="commom/img/top-mix.png" alt="top mix" title="top mix"></a>
                 </div> 
                 <div class="col-xs-12 col-sm-6 col-md-6">
                     <h2 class="titulo-destaque-pag">Catálogo</h2>
