--- a/commom/css/estilo.css
+++ b/commom/css/estilo.css
@@ -549,22 +549,25 @@ a:focus{
     opacity: 0.7;
     padding: 18px 18px;
     position: absolute;
-    top: 36%;
+    bottom: 1%;
     left: 10%;
     max-width: 460px;
+    border-left: 10px #ffdd00 solid;
 }
 
 .bloco-desc-banner h2{
-    font-size: 1.4em;
+    font-size: 2em;
+    padding-bottom: 15px;
+    text-transform: uppercase;
     color: #fff;
+    font-family: DroidSans;
 }
 
 .bloco-desc-banner p{
     font-size: 1em;
-    color: #fff;
     line-height: 1.2;
-    text-align: justify;
-    direction: ltr;
+    color: #fff;
+    font-family: DroidSans;
 }
 
 .linha-desc-banner{
@@ -600,6 +603,11 @@ a:focus{
 
 .breadcrumb>li+li:before{
     color: #464646;
+}
+
+.no-border-top{
+    border-top: none !important;
+    margin-top: -20px !important;
 }
 /*
 * Banner
@@ -925,6 +933,7 @@ a:focus{
     padding-top: 5px;
     border-bottom: 1px solid #c5c5c6;
     width: 100%;
+    cursor: pointer;
 }
 
 .img-marca-lateral{
@@ -1025,6 +1034,7 @@ a:focus{
     font-family: 'DroidSans';
     text-transform: uppercase;
     margin-left: 48px;
+    list-style: none;
 }
 
 .icon-desc-produto{
@@ -1290,7 +1300,7 @@ iframe{
     }
 
     .bloco-email-topo{
-        width: 230px;
+        width: 280px;
         padding-top: 60px;
         /*float: left;*/
         float: right;
