--- a/commom/templates/inc/header.html
+++ b/commom/templates/inc/header.html
@@ -1,3 +1,4 @@
+{include file="inc/analyticstracking.html"}
 <header>
 	<nav class="navbar navbar-default">
 		<div class="encapsula-topo">
@@ -55,9 +56,9 @@
 				<img class="icon-contato-topo" src="commom/img/icon-tel.png" alt="Icone telefone" title="Icone telefone">
 				<a href="tel:11988643325" class="link-contato-topo" title="11  0000-0000">11  0000-0000</a>
 	    	</div> 
-	    	<div class="col-xs-12 col-sm-2 col-md-2 bloco-email-topo pd-none">
+	    	<div class="col-xs-12 col-sm-3 col-md-3 bloco-email-topo pd-none">
 				<img class="icon-contato-topo" src="commom/img/icon-email.png" alt="Icone telefone" title="Icone telefone">
-				<a href="mailto:contato@ecoflex.com.br" class="link-contato-topo" title="contato@ecoflex.com.br">contato@ecoflex.com.br</a>
+				<a href="mailto:contato@ecoflexautomotive.com.br" class="link-contato-topo" title="contato@ecoflexautomotive.com.br">contato@ecoflexautomotive.com.br</a>
 	    	</div>
 	    	<!-- <div class="col-xs-12 col-sm-2 col-md-2 bloco-local-topo pd-none hidden-xs">
 	    		<img class="icon-contato-topo" src="commom/img/icon-local.png" alt="Icone telefone" title="Icone telefone">
