--- a/commom/templates/inc/menu-produtos.html
+++ b/commom/templates/inc/menu-produtos.html
@@ -9,7 +9,7 @@
                 </li>
                 <li class="linha-menu-produto menu-produto-icon">
                         <img class="img-marca-lateral" src="{$menuLateral[i].caminhoImagem}" alt="{$menuLateral[i].marca}" title="{$menuLateral[i].marca}">
-                        <a class="link-menu-produto" href="javascript: void(0)">{$menuLateral[i].marca}</a>
+                        <span class="link-menu-produto" href="javascript: void(0)">{$menuLateral[i].marca}</span>
                     <ul class="submenu-produto-lateral">
                     {/if}
                     <li class="linha-submenu-produto">
